[tool.poetry]
name = "juejin_signin"
version = "0.1.0"
description = ""
authors = ["chenwei <chenwei@lingkou.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
schedule = "^1.1.0"
flask = "^2.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
